Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18904

interop sanity test_230k: FAIL: migrate -m 1,3 failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • Lustre 2.15.7
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for jianyu <yujian@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/3b105e35-168a-46e9-82c8-a0d6a6faa4a5

      test_230k failed with the following error:

      == sanity test 230k: file data not changed after dir migration ========================================================== 21:35:57 (1744061757)
      lmv_stripe_count: 2 lmv_stripe_offset: 0 lmv_hash_type: fnv_1a_64
      mdtidx		 FID[seq:oid:ver]
           0		 [0x200006990:0x13:0x0]		
           1		 [0x240005223:0x3:0x0]		
      10 files on MDT0
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.4 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.2 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.16 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.20 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.15 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.18 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.12 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.6 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.8 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.5 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.17 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.7 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.1 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.19 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.10 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.3 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.13 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.11 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.9 migrate failed: File descriptor in bad state (77)
      lfs migrate: /mnt/lustre/d230k.sanity/f230k.sanity.14 migrate failed: File descriptor in bad state (77)
       sanity test_230k: @@@@@@ FAIL: migrate -m 1,3 failed
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-b2_15/101 - 4.18.0-553.27.1.el8_10.x86_64
      servers: https://build.whamcloud.com/job/lustre-b2_12/170 - 3.10.0-1160.81.1.el7_lustre.x86_64

      <<Please provide additional information about the failure here>>

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity test_230k - migrate -m 1,3 failed

            laisiyao Lai Siyao
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: