LU-18904 llite: set hash fnv_1a_64 for old server

2.12 server may treat unknown hash type in dir migration as error,
set it to fnv_1a_64 as old client does. And also clear
LMV_HASH_FLAG_FIXED for the same reason.

Re-enable sanity test_230c and test_230k to verify this is working.

Test-Parameters: testlist=sanity env=ONLY="230c 230k",PTLDEBUG=-1 mdtcount=4 mdscount=2 serverversion=EXA5
Signed-off-by: Lai Siyao <lai.siyao@whamcloud.com>
Change-Id: I34d4e5d4d6693e51f165608cacc72ac281de7630
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58932
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Hongchao Zhang <hongchao@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>